Dark mode ultimata. Prevent default sul submit

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -125,6 +125,7 @@ header {
 
         form {
             .btn {
+                border: 0;
                 transition: background-color 0.2s ease-in-out;
 
                 &:hover {
@@ -164,10 +165,18 @@ footer {
 
 /* ***** DARK MODE ***** */
 #dark-mode {
-    width: 80%;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0.25rem 0.75rem;
     font-size: myFonts.$standard-size * 0.8;
+    color: rgba(255, 255, 255, 0.55);
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 0.375rem;
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+        background-color: myColors.$hover;
+        color: myColors.$text-light;
+    }
 }
 
 body.dark-mode {
